--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: List available Xcode versions
+      run: ls /Applications/ | grep Xcode
+      
     - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+      run: |
+        # Try Xcode 16.x versions in order of preference
+        if [ -d "/Applications/Xcode_16.4.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
+        elif [ -d "/Applications/Xcode_16.1.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.1.app/Contents/Developer
+        elif [ -d "/Applications/Xcode_16.0.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+        else
+          echo "Using default Xcode version"
+        fi
       
     - name: Show Xcode version
       run: xcodebuild -version
