--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,17 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+      run: |
+        # Try Xcode 16.x versions in order of preference
+        if [ -d "/Applications/Xcode_16.4.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
+        elif [ -d "/Applications/Xcode_16.1.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.1.app/Contents/Developer
+        elif [ -d "/Applications/Xcode_16.0.app" ]; then
+          sudo xcode-select -s /Applications/Xcode_16.0.app/Contents/Developer
+        else
+          echo "Using default Xcode version"
+        fi
         
     - name: Build app
       run: |
